completed is implicitly true
